--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ diff-match-patch==20121119
 Django==2.0.5
 django-cors-headers==2.2.0
 django-crispy-forms==1.7.2
+django-filter==1.1.0
 django-formtools==2.1
 django-import-export==1.0.0
 djangorestframework==3.8.2
